packages/meta/src/test/__tests__/language-tests/faultyDefFiles/syntax-errors/test9.lang
language XXXX
model test {
}

modelunit testUnit {
}


interface RRRR implements WWWW, YYYY {
}
